--- a/package.json
+++ b/package.json
@@ -10,12 +10,42 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/netinfo": "8.2.0",
+    "@react-navigation/bottom-tabs": "^6.3.1",
+    "@react-navigation/core": "^6.2.1",
+    "@react-navigation/drawer": "^6.4.2",
+    "@react-navigation/material-bottom-tabs": "^6.2.1",
+    "@react-navigation/material-top-tabs": "^6.2.1",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/stack": "^6.2.1",
+    "@reduxjs/toolkit": "^1.8.2",
+    "eas-cli": "^0.54.1",
     "expo": "~45.0.0",
+    "expo-app-loading": "~2.0.0",
+    "expo-asset": "~8.5.0",
+    "expo-av": "~11.2.3",
+    "expo-background-fetch": "~10.2.0",
+    "expo-barcode-scanner": "~11.3.0",
+    "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
+    "expo-updates": "~0.13.2",
+    "firebase": "^9.8.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-web": "0.17.7"
+    "react-native-bouncy-checkbox": "^2.1.10",
+    "react-native-elements": "^3.4.2",
+    "react-native-gesture-handler": "~2.2.1",
+    "react-native-image-crop-picker": "^0.38.0",
+    "react-native-image-picker": "^4.8.4",
+    "react-native-paper": "^4.12.2",
+    "react-native-reanimated": "^2.8.0",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "0.17.7",
+    "react-redux": "^8.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
